Blender crashes when a file or folder is opened from the Preferences dialog if the Maximized File Browser option is active #84013

Closed
opened 2020-12-21 12:36:24 +01:00 by Metin Seven · 22 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-20 17:48, hash: d283a093d6
Worked: 2.92.0 Alpha, branch: master, commit date: 2020-12-14 15:44, hash: 010f44b855

Short description of error
Blender crashes when I try to open any file or folder from the Preferences dialog after activating Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area. Switching that setting on and then trying to open a file (like an add-on) or folder from the Preferences dialog causes a reproducable Blender crash.

Exact steps for others to reproduce the error

  • Start Blender.
  • Open Preferences.
  • Activate Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area.
  • Activate the Node Presets add-on.
  • Assign a folder.
  • Blender crashes, at least on my system.

Blender also crashes when trying to open an add-on or a Keyboard layout data file.

libc.so.6!__GI_raise(int sig) (/build/glibc-ZN95T4/glibc-2.31/sysdeps/unix/sysv/linux/raise.c:50)
libc.so.6!__GI_abort() (/build/glibc-ZN95T4/glibc-2.31/stdlib/abort.c:79)
_BLI_assert_abort() (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:50)
wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2262)
wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2409)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2818)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2870)
wm_event_do_handlers(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3293)
WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:635)
main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522)
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-20 17:48, hash: `d283a093d6` Worked: 2.92.0 Alpha, branch: master, commit date: 2020-12-14 15:44, hash: `010f44b855` **Short description of error** Blender crashes when I try to open any file or folder from the Preferences dialog after activating Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area. Switching that setting on and then trying to open a file (like an add-on) or folder from the Preferences dialog causes a reproducable Blender crash. **Exact steps for others to reproduce the error** - Start Blender. - Open Preferences. - Activate Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area. - Activate the Node Presets add-on. - Assign a folder. - Blender crashes, at least on my system. Blender also crashes when trying to open an add-on or a Keyboard layout data file. ```lines libc.so.6!__GI_raise(int sig) (/build/glibc-ZN95T4/glibc-2.31/sysdeps/unix/sysv/linux/raise.c:50) libc.so.6!__GI_abort() (/build/glibc-ZN95T4/glibc-2.31/stdlib/abort.c:79) _BLI_assert_abort() (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:50) wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2262) wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2409) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2818) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2870) wm_event_do_handlers(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3293) WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:635) main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522) ```

#84059 was marked as duplicate of this issue

#84059 was marked as duplicate of this issue
Author

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1
Author

Hmm, in the mean time I've noticed that Blender crashes with every attempt of opening a file from the Preferences, including a keymap and external add-ons, at least on my system.

Hmm, in the mean time I've noticed that Blender crashes with every attempt of opening a file from the Preferences, including a keymap and external add-ons, at least on my system.
Metin Seven changed title from Node Presets add-on makes Blender crash when folder is assigned to Blender crashes when a file or folder is opened from the Preferences dialog 2020-12-21 13:10:58 +01:00

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't reproduce a crash on Windows or Linux with the latest master.

Could you please open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

Once you've done that please create a copy of C:\Users\cyber\AppData\Roaming\Blender Foundation\Blender\2.92 (as a backup of your current preferences) and then repeat the same with the blender_factory_startup.cmd.

I can't reproduce a crash on Windows or Linux with the latest master. Could you please open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png) Once you've done that please create a copy of `C:\Users\cyber\AppData\Roaming\Blender Foundation\Blender\2.92` (as a backup of your current preferences) and then repeat the same with the `blender_factory_startup.cmd`.
Author

Thanks @rjg ,

I've just completely deinstalled Blender and all add-ons. Going to perform a clean reinstall of the latest alpha, and check if it's a local issue.

Thanks @rjg , I've just completely deinstalled Blender and all add-ons. Going to perform a clean reinstall of the latest alpha, and check if it's a local issue.
Author

OK, deinstalled Blender completely, restarted, installed the latest alpha, and it seems to work now.

I suspect it was caused by some data file / folder conflict due to a parallel installation of Blender Octane.

OK, deinstalled Blender completely, restarted, installed the latest alpha, and it seems to work now. I suspect it was caused by some data file / folder conflict due to a parallel installation of Blender Octane.
Author

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Author

The issue returned, but I think I error-trapped the culprit...

It's related to Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area. Switching that setting on causes a reproducable Blender crash.

I'll adjust the inital bug report, if possible (I assume it'll be reopened after posting this).

The issue returned, but I think I error-trapped the culprit... It's related to Preferences ➔ Interface ➔ Temporary Editors ➔ File Browser ➔ Maximized Area. Switching that setting on causes a reproducable Blender crash. I'll adjust the inital bug report, if possible (I assume it'll be reopened after posting this).
Author

OK, I can't seem to reopen the issue. I'll post a new bug report.

OK, I can't seem to reopen the issue. I'll post a new bug report.

Changed status from 'Resolved' to: 'Needs User Info'

Changed status from 'Resolved' to: 'Needs User Info'
Author

Ah, thanks for reopening the report, @rjg .

Ah, thanks for reopening the report, @rjg .

@MetinSeven-1 I've reopened it, but a new report is fine as well.

@MetinSeven-1 I've reopened it, but a new report is fine as well.
Metin Seven changed title from Blender crashes when a file or folder is opened from the Preferences dialog to Blender crashes when a file or folder is opened from the Preferences dialog if the Maximized File Browser option is active 2020-12-21 14:14:10 +01:00
Author

Adjusted this bug report, thanks again for your assistance. I hope it's reproducible for you as well.

Adjusted this bug report, thanks again for your assistance. I hope it's reproducible for you as well.

Yes, that crash is reproducible. I will check what a known good version is and try to identify the commit that caused this.

Yes, that crash is reproducible. I will check what a known good version is and try to identify the commit that caused this.
Author

Great, thanks! 👍

Great, thanks! 👍

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Julian Eisel was assigned by Robert Guetzkow 2020-12-21 15:33:47 +01:00

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This problem was introduced by commit 1e799dd26e @Severin.

This problem was introduced by commit 1e799dd26e @Severin.

This issue was referenced by 78d2ce19c4

This issue was referenced by 78d2ce19c4fbb5678995efae74a6128a3dcc4e73
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#84013
No description provided.